--- a/html/Cart.html
+++ b/html/Cart.html
@@ -92,4 +92,4 @@
       } else {
         var browserDetect = document.getElementById("browser-detect");
         document.getElementsByTagName("body")[0].removeChild(browserDetect);
-      }</script><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=WmGeNgE4Kl" height=0 width=0 style=display:none;visibility:hidden></iframe></noscript><noscript><strong>Mua máy tính, laptop đến 000 gần nhất | 000.vn</strong></noscript><div id=app></div><script src=/js/chunk-vendors.493490b3.js></script><script src=/js/index.9245feb9.js></script></body></html>
+      }</script><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=WmGeNgE4Kl" height=0 width=0 style=display:none;visibility:hidden></iframe></noscript><noscript><strong>Mua linh kiện máy tính đến 000  | 000.vn</strong></noscript><div id=app></div><script src=/js/chunk-vendors.493490b3.js></script><script src=/js/index.9245feb9.js></script></body></html>
