--- a/html/purchaseoder.html
+++ b/html/purchaseoder.html
@@ -1,6 +1,6 @@
 
 
-<!DOCTYPE html><html><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><link rel=icon href=/images/logo.png><link rel=stylesheet href=/css/phongvu-icon.css><link rel=stylesheet href=/css/font-awesome.css><link rel=stylesheet href=/css/main.css><link href="https://fonts.googleapis.com/css?family=Roboto:100:300,400,500,700,900|Material+Icons" rel=stylesheet><script>(function(w, d, s, l, i) {
+<!DOCTYPE html><html><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><link rel=icon href=/images/logo.png><link rel=stylesheet href=/css/000-icon.css><link rel=stylesheet href=/css/font-awesome.css><link rel=stylesheet href=/css/main.css><link href="https://fonts.googleapis.com/css?family=Roboto:100:300,400,500,700,900|Material+Icons" rel=stylesheet><script>(function(w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
         var f = d.getElementsByTagName(s)[0],
@@ -29,7 +29,7 @@
         "mePuzz"
       );
       mePuzz("setAppId", "WmGeNgE4Kl");
-      mePuzz("track", "pageview");</script><link href=/css/chunk-vendors.68852ff2.css rel=preload as=style><link href=/css/index.fec7a1cc.css rel=preload as=style><link href=/js/chunk-vendors.493490b3.js rel=preload as=script><link href=/js/index.d02b4a6e.js rel=preload as=script><link href=/css/chunk-vendors.68852ff2.css rel=stylesheet><link href=/css/index.fec7a1cc.css rel=stylesheet></head><body><div id=browser-detect><h1>Phongvu.vn chỉ hoạt động tốt trên các trình duyệt Chrome,<br>Cốc Cốc, Firefox, Safari và Microsoft Edge (IE 12+)</h1><h2 id=browser-result>detecting…</h2></div><style>#browser-detect {
+      mePuzz("track", "pageview");</script><link href=/css/chunk-vendors.68852ff2.css rel=preload as=style><link href=/css/index.fec7a1cc.css rel=preload as=style><link href=/js/chunk-vendors.493490b3.js rel=preload as=script><link href=/js/index.d02b4a6e.js rel=preload as=script><link href=/css/chunk-vendors.68852ff2.css rel=stylesheet><link href=/css/index.fec7a1cc.css rel=stylesheet></head><body><div id=browser-detect><h1>000.vn chỉ hoạt động tốt trên các trình duyệt Chrome,<br>Cốc Cốc, Firefox, Safari và Microsoft Edge (IE 12+)</h1><h2 id=browser-result>detecting…</h2></div><style>#browser-detect {
         font-family: "Roboto", sans-serif;
         background-image: url("maintenance.png");
         background-size: cover;
