--- a/html/Cart.html
+++ b/html/Cart.html
@@ -44,7 +44,7 @@
             <div class="title2">Mua bán linh kiện , phụ kiện máy tính các loại </div>
         </div>
         <div id="content">
-            <h2>GIỎ HÀNG?</h2>
+            <h2>GIỎ HÀNG</h2>
     </div>
 </body>
 </html>
