--- a/html/Cart.html
+++ b/html/Cart.html
@@ -45,6 +45,8 @@
         </div>
         <div id="content">
             <h2>GIỎ HÀNG</h2>
+        </div>
+        <div id="footer">&copy;2020 Web mua bán linh kiện máy tính </div>
     </div>
 </body>
 </html>
