--- a/html/Cart.html
+++ b/html/Cart.html
@@ -35,6 +35,7 @@
             padding-top:5px;
             padding-bottom:15px;
         }
+        
     </style>
 </head>
 <body>
@@ -44,8 +45,15 @@
             <div class="title2">Mua bán linh kiện , phụ kiện máy tính các loại </div>
         </div>
         <div id="content">
-            <h2>GIỎ HÀNG</h2>
+            <h2>GIỎ HÀNG :</h2>
+            <p>&#160</p>
+            <p>&#160</p> 
+            <img src="https://salt.tikicdn.com/desktop/img/mascot@2x.png" width="200px"hspace="250"
+            <p>&#160</p> 
+            <p>&#160</p> 
         </div>
+        <div class="btn">
+        <a href="#">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; &emsp;Quay về trang chủ </a>
         <div id="footer">&copy;2020 Web mua bán linh kiện máy tính </div>
     </div>
 </body>
