--- a/html/payment.html
+++ b/html/payment.html
@@ -45,6 +45,39 @@
         </div>
         <div id="content">
             <h2>THANH TOÁN</h2>
+           <div class="content">
+        
+      </div>
+    </div>
+    <div class="checkout_form">
+          <input type="text" placeholder="Họ tên">
+        </div>
+        <div class="section">
+          <input type="text" placeholder="Điện thoại di động">
+        </div>
+        <div class="section last_section">
+          <div class="item">
+            <input type="text" placeholder="Tỉnh/Thành phố">
+          </div>
+          <div class="item">
+            <input type="text" placeholder="Phường/Xã">
+          </div>
+          <div class="item">
+            <input type="text" placeholder="Địa chỉ giao hàng">
+          </div>
+          <div class="item">
+            <input type="text" placeholder="Địa chỉ email">
+          </div>
+          <div class="item">
+            <input type="text" placeholder="Ghi chú">
+          </div>
+          <div class="btn">
+          <a href="#">Thanh Toán</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
           </div>
         <div id="footer">&copy;2020 Web mua bán linh kiện máy tính </div>
     </div>
