--- a/html/purchaseoder.html
+++ b/html/purchaseoder.html
@@ -31,7 +31,7 @@
         }
         .title2{
             text-align:center;
-            font-size:18px;
+            font-size:18px; 
             padding-top:5px;
             padding-bottom:15px;
         }
@@ -44,14 +44,12 @@
             <div class="title2">Mua bán linh kiện , phụ kiện máy tính các loại </div>
         </div>
         <div id="content">
-            <h2>ĐƠN ĐẶT HÀNG</h2>
-            <ul type="circle">
-                <li>Mã đơn hàng: </li>
-                <li>Ngày mua:</li>
-                <li>Sản phẩm:</li>
-                <li>Tổng tiền:</li>
-                <li>Trạng thái đơn hàng:</li>
-            </ul>
+            <h2>ĐƠN ĐẶT HÀNG</h2>     
+            <input type="text" id="" name="" placeholder="Nhập mã đơn hàng">
+            <input type="submit" value="Tìm kiếm" class="btn">
+            <p> Mã đơn : </p>
+            <p> Ngày đặt : </p>
+            <p> Tình Trạng : </p>       
            </div>
         <div id="footer">&copy;2020 Web mua bán linh kiện máy tính </div>
     </div>
